--- a/index.html
+++ b/index.html
@@ -49,92 +49,102 @@
         </div>
       </section>
       <section class="advantages">
-        <h2 class="visually-hidden">Переваги</h2>
-        <ul class="list">
-          <li>
-            <h3 class="advantages-title">Увага до деталей</h3>
-            <p class="advantages-descriptions">
-              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="advantages-title">Пунктуальність</h3>
-            <p class="advantages-descriptions">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="advantages-title">Планування</h3>
-            <p class="advantages-descriptions">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="advantages-title">Сучасні технології</h3>
-            <p class="advantages-descriptions">
-              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Переваги</h2>
+          <ul class="list">
+            <li>
+              <h3 class="advantages-title">Увага до деталей</h3>
+              <p class="advantages-descriptions">
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+              </p>
+            </li>
+            <li>
+              <h3 class="advantages-title">Пунктуальність</h3>
+              <p class="advantages-descriptions">
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+              </p>
+            </li>
+            <li>
+              <h3 class="advantages-title">Планування</h3>
+              <p class="advantages-descriptions">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li>
+              <h3 class="advantages-title">Сучасні технології</h3>
+              <p class="advantages-descriptions">
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="work">
-        <h2 class="section-title">Чим ми займаємося</h2>
-        <ul class="list">
-          <li><img src="./images/box1.jpg" alt="Технологія перша" width="370" height="294" /></li>
-          <li>
-            <img src="./images/box2.jpg" alt="Технологія друга" width="370" height="294" />
-          </li>
-          <li>
-            <img src="./images/box3.jpg" alt="Технологія третя" width="370" height="294" />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Чим ми займаємося</h2>
+          <ul class="list">
+            <li><img src="./images/box1.jpg" alt="Технологія перша" width="370" height="294" /></li>
+            <li>
+              <img src="./images/box2.jpg" alt="Технологія друга" width="370" height="294" />
+            </li>
+            <li>
+              <img src="./images/box3.jpg" alt="Технологія третя" width="370" height="294" />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="list">
-          <li class="card">
-            <img src="./images/foto1.jpg" alt="Фото Ігора Дем'яненка" width="270" height="260" />
-            <h3 class="team-name">Ігор Дем'яненко</h3>
-            <p lang="en" class="team-position">Product Designer</p>
-          </li>
-          <li class="card">
-            <img src="./images/foto2.jpg" alt="Фото Ольги Рєпіної" width="270" height="260" />
-            <h3 class="team-name">Ольга Рєпіна</h3>
-            <p lang="en" class="team-position">Frontend Developer</p>
-          </li>
-          <li class="card">
-            <img src="./images/foto3.jpg" alt="Фото Миколи Тарасова" width="270" height="260" />
-            <h3 class="team-name">Микола Тарасов</h3>
-            <p lang="en" class="team-position">Marketing</p>
-          </li>
-          <li class="card">
-            <img src="./images/foto4.jpg" alt="Фото Михайла Єрмакова" width="270" height="260" />
-            <h3 class="team-name">Михайло Єрмаков</h3>
-            <p lang="en" class="team-position">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="list">
+            <li class="card">
+              <img src="./images/foto1.jpg" alt="Фото Ігора Дем'яненка" width="270" height="260" />
+              <h3 class="team-name">Ігор Дем'яненко</h3>
+              <p lang="en" class="team-position">Product Designer</p>
+            </li>
+            <li class="card">
+              <img src="./images/foto2.jpg" alt="Фото Ольги Рєпіної" width="270" height="260" />
+              <h3 class="team-name">Ольга Рєпіна</h3>
+              <p lang="en" class="team-position">Frontend Developer</p>
+            </li>
+            <li class="card">
+              <img src="./images/foto3.jpg" alt="Фото Миколи Тарасова" width="270" height="260" />
+              <h3 class="team-name">Микола Тарасов</h3>
+              <p lang="en" class="team-position">Marketing</p>
+            </li>
+            <li class="card">
+              <img src="./images/foto4.jpg" alt="Фото Михайла Єрмакова" width="270" height="260" />
+              <h3 class="team-name">Михайло Єрмаков</h3>
+              <p lang="en" class="team-position">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" lang="en" class="logo">Web<span class="logo-light">Studio</span></a>
-      <address>
-        <ul class="list">
-          <li>
-            <a
-              href="https://goo.gl/maps/4VGZV7UP3L1ZBJYh8"
-              target="_blank"
-              rel="noreferrer noopener"
-              class="link adress"
-            >
-              м. Київ, пр-т Лесі Українки, 26
-            </a>
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="link footer-contacts">info@devstudio.com</a>
-          </li>
-          <li><a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" lang="en" class="logo">Web<span class="logo-light">Studio</span></a>
+        <address>
+          <ul class="list">
+            <li>
+              <a
+                href="https://goo.gl/maps/4VGZV7UP3L1ZBJYh8"
+                target="_blank"
+                rel="noreferrer noopener"
+                class="link adress"
+              >
+                м. Київ, пр-т Лесі Українки, 26
+              </a>
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="link footer-contacts"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li><a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
