--- a/portfolio.html
+++ b/portfolio.html
@@ -22,145 +22,158 @@
   </head>
   <body>
     <header>
-      <a href="./index.html" lang="en" class="logo">Web<span class="logo-dark">Studio</span></a>
-      <nav>
+      <div class="container">
+        <a href="./index.html" lang="en" class="logo">Web<span class="logo-dark">Studio</span></a>
+        <nav>
+          <ul class="list">
+            <li><a href="./index.html" class="link navigation">Студія</a></li>
+            <li><a href="./portfolio.html" class="link navigation current">Портфоліо</a></li>
+            <li><a href="" class="link navigation">Контакти</a></li>
+          </ul>
+        </nav>
         <ul class="list">
-          <li><a href="./index.html" class="link navigation">Студія</a></li>
-          <li><a href="./portfolio.html" class="link navigation current">Портфоліо</a></li>
-          <li><a href="" class="link navigation">Контакти</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="link header-contacts">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="link header-contacts">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-      <ul class="list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link header-contacts">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="link header-contacts">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <section class="portfolio">
-        <h1 class="visually-hidden">Портфоліо</h1>
-        <ul class="list">
-          <li><button type="button" class="button">Усі</button></li>
-          <li><button type="button" class="button">Веб-сайти</button></li>
-          <li><button type="button" class="button">Додатки</button></li>
-          <li><button type="button" class="button">Дизайн</button></li>
-          <li><button type="button" class="button">Маркетинг</button></li>
-        </ul>
-        <ul class="list">
-          <li class="item">
-            <a href="" class="link">
-              <img src="./images/img1.jpg" alt="Веб-сайт Технокряк" width="370" height="294" />
-              <h2 class="title">Технокряк</h2>
-              <p class="filter-text">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="item">
-            <a href="" class="link">
-              <img
-                src="./images/img2.jpg"
-                alt="Дизайн Постер New Orlean vs Golden Star"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Постер New Orlean vs Golden Star</h2>
-              <p class="filter-text">Дизайн</p>
-            </a>
-          </li>
-          <li class="item">
-            <a href="" class="link">
-              <img
-                src="./images/img3.jpg"
-                alt="Додаток Ресторан Seafood"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Ресторан Seafood</h2>
-              <p class="filter-text">Додаток</p>
-            </a>
-          </li>
-          <li class="item">
-            <a href="" class="link">
-              <img src="./images/img4.jpg" alt="Маркетинг Проєкт Prime" width="370" height="294" />
-              <h2 class="title">Проєкт Prime</h2>
-              <p class="filter-text">Маркетинг</p>
-            </a>
-          </li>
-          <li class="item">
-            <a href="" class="link">
-              <img src="./images/img5.jpg" alt="Додаток Проєкт Boxes" width="370" height="294" />
-              <h2 class="title">Проєкт Boxes</h2>
-              <p class="filter-text">Додаток</p>
-            </a>
-          </li>
-          <li class="item">
-            <a href="" class="link">
-              <img
-                src="./images/img6.jpg"
-                alt="Веб-сайт Inspiration has no Borders"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Inspiration has no Borders</h2>
-              <p class="filter-text">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="item">
-            <a href="" class="link">
-              <img
-                src="./images/img7.jpg"
-                alt="Дизайн Видання Limited Edition"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Видання Limited Edition</h2>
-              <p class="filter-text">Дизайн</p>
-            </a>
-          </li>
-          <li class="item">
-            <a href="" class="link">
-              <img src="./images/img8.jpg" alt="Маркетинг Проєкт LAB" width="370" height="294" />
-              <h2 class="title">Проєкт LAB</h2>
-              <p class="filter-text">Маркетинг</p>
-            </a>
-          </li>
-          <li class="item">
-            <a href="" class="link">
-              <img
-                src="./images/img9.jpg"
-                alt="Додаток Growing Business"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Growing Business</h2>
-              <p class="filter-text">Додаток</p>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 class="visually-hidden">Портфоліо</h1>
+          <ul class="list">
+            <li><button type="button" class="button">Усі</button></li>
+            <li><button type="button" class="button">Веб-сайти</button></li>
+            <li><button type="button" class="button">Додатки</button></li>
+            <li><button type="button" class="button">Дизайн</button></li>
+            <li><button type="button" class="button">Маркетинг</button></li>
+          </ul>
+          <ul class="list">
+            <li class="item">
+              <a href="" class="link">
+                <img src="./images/img1.jpg" alt="Веб-сайт Технокряк" width="370" height="294" />
+                <h2 class="title">Технокряк</h2>
+                <p class="filter-text">Веб-сайт</p>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="link">
+                <img
+                  src="./images/img2.jpg"
+                  alt="Дизайн Постер New Orlean vs Golden Star"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                <p class="filter-text">Дизайн</p>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="link">
+                <img
+                  src="./images/img3.jpg"
+                  alt="Додаток Ресторан Seafood"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="title">Ресторан Seafood</h2>
+                <p class="filter-text">Додаток</p>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="link">
+                <img
+                  src="./images/img4.jpg"
+                  alt="Маркетинг Проєкт Prime"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="title">Проєкт Prime</h2>
+                <p class="filter-text">Маркетинг</p>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="link">
+                <img src="./images/img5.jpg" alt="Додаток Проєкт Boxes" width="370" height="294" />
+                <h2 class="title">Проєкт Boxes</h2>
+                <p class="filter-text">Додаток</p>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="link">
+                <img
+                  src="./images/img6.jpg"
+                  alt="Веб-сайт Inspiration has no Borders"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="title">Inspiration has no Borders</h2>
+                <p class="filter-text">Веб-сайт</p>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="link">
+                <img
+                  src="./images/img7.jpg"
+                  alt="Дизайн Видання Limited Edition"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="title">Видання Limited Edition</h2>
+                <p class="filter-text">Дизайн</p>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="link">
+                <img src="./images/img8.jpg" alt="Маркетинг Проєкт LAB" width="370" height="294" />
+                <h2 class="title">Проєкт LAB</h2>
+                <p class="filter-text">Маркетинг</p>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="link">
+                <img
+                  src="./images/img9.jpg"
+                  alt="Додаток Growing Business"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="title">Growing Business</h2>
+                <p class="filter-text">Додаток</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" lang="en" class="logo">Web<span class="logo-light">Studio</span></a>
-      <address>
-        <ul class="list">
-          <li>
-            <a
-              href="https://goo.gl/maps/4VGZV7UP3L1ZBJYh8"
-              target="_blank"
-              rel="noreferrer noopener"
-              class="link adress"
-            >
-              м. Київ, пр-т Лесі Українки, 26
-            </a>
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="link footer-contacts">info@devstudio.com</a>
-          </li>
-          <li><a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" lang="en" class="logo">Web<span class="logo-light">Studio</span></a>
+        <address>
+          <ul class="list">
+            <li>
+              <a
+                href="https://goo.gl/maps/4VGZV7UP3L1ZBJYh8"
+                target="_blank"
+                rel="noreferrer noopener"
+                class="link adress"
+              >
+                м. Київ, пр-т Лесі Українки, 26
+              </a>
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="link footer-contacts"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li><a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
