--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="top">
       <div class="container">
         <a href="./index.html" lang="en" class="logo">Web<span class="logo-dark">Studio</span></a>
         <nav>
-          <ul class="list">
+          <ul class="list top-nav">
             <li><a href="./index.html" class="link navigation current">Студія</a></li>
             <li><a href="./portfolio.html" class="link navigation">Портфоліо</a></li>
             <li><a href="" class="link navigation">Контакти</a></li>
           </ul>
         </nav>
-        <ul class="list">
+        <ul class="list contacts">
           <li>
             <a href="mailto:info@devstudio.com" class="link header-contacts">info@devstudio.com</a>
           </li>
@@ -43,34 +43,32 @@
     </header>
     <main>
       <section class="hero">
-        <div class="container">
-          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="hero-button">Замовити послугу</button>
-        </div>
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button type="button" class="hero-button">Замовити послугу</button>
       </section>
       <section class="advantages">
         <div class="container">
           <h2 class="visually-hidden">Переваги</h2>
-          <ul class="list">
-            <li>
+          <ul class="list advantages-list">
+            <li class="advantages-item">
               <h3 class="advantages-title">Увага до деталей</h3>
               <p class="advantages-descriptions">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li>
+            <li class="advantages-item">
               <h3 class="advantages-title">Пунктуальність</h3>
               <p class="advantages-descriptions">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
-            <li>
+            <li class="advantages-item">
               <h3 class="advantages-title">Планування</h3>
               <p class="advantages-descriptions">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li class="advantages-item">
               <h3 class="advantages-title">Сучасні технології</h3>
               <p class="advantages-descriptions">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -82,12 +80,14 @@
       <section class="work">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
-          <ul class="list">
-            <li><img src="./images/box1.jpg" alt="Технологія перша" width="370" height="294" /></li>
-            <li>
+          <ul class="list work-list">
+            <li class="work-item">
+              <img src="./images/box1.jpg" alt="Технологія перша" width="370" height="294" />
+            </li>
+            <li class="work-item">
               <img src="./images/box2.jpg" alt="Технологія друга" width="370" height="294" />
             </li>
-            <li>
+            <li class="work-item">
               <img src="./images/box3.jpg" alt="Технологія третя" width="370" height="294" />
             </li>
           </ul>
@@ -96,7 +96,7 @@
       <section class="team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul class="list">
+          <ul class="list cards">
             <li class="card">
               <img src="./images/foto1.jpg" alt="Фото Ігора Дем'яненка" width="270" height="260" />
               <h3 class="team-name">Ігор Дем'яненко</h3>
@@ -126,7 +126,7 @@
         <a href="./index.html" lang="en" class="logo">Web<span class="logo-light">Studio</span></a>
         <address>
           <ul class="list">
-            <li>
+            <li class="footer-item">
               <a
                 href="https://goo.gl/maps/4VGZV7UP3L1ZBJYh8"
                 target="_blank"
@@ -136,12 +136,14 @@
                 м. Київ, пр-т Лесі Українки, 26
               </a>
             </li>
-            <li>
+            <li class="footer-item">
               <a href="mailto:info@devstudio.com" class="link footer-contacts"
                 >info@devstudio.com</a
               >
             </li>
-            <li><a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a></li>
+            <li class="footer-item">
+              <a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a>
+            </li>
           </ul>
         </address>
       </div>
