--- a/portfolio.html
+++ b/portfolio.html
@@ -21,17 +21,17 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="top">
       <div class="container">
         <a href="./index.html" lang="en" class="logo">Web<span class="logo-dark">Studio</span></a>
         <nav>
-          <ul class="list">
-            <li><a href="./index.html" class="link navigation">Студія</a></li>
-            <li><a href="./portfolio.html" class="link navigation current">Портфоліо</a></li>
+          <ul class="list top-nav">
+            <li><a href="./index.html" class="link navigation current">Студія</a></li>
+            <li><a href="./portfolio.html" class="link navigation">Портфоліо</a></li>
             <li><a href="" class="link navigation">Контакти</a></li>
           </ul>
         </nav>
-        <ul class="list">
+        <ul class="list contacts">
           <li>
             <a href="mailto:info@devstudio.com" class="link header-contacts">info@devstudio.com</a>
           </li>
@@ -45,19 +45,21 @@
       <section class="portfolio">
         <div class="container">
           <h1 class="visually-hidden">Портфоліо</h1>
-          <ul class="list">
-            <li><button type="button" class="button">Усі</button></li>
-            <li><button type="button" class="button">Веб-сайти</button></li>
-            <li><button type="button" class="button">Додатки</button></li>
-            <li><button type="button" class="button">Дизайн</button></li>
-            <li><button type="button" class="button">Маркетинг</button></li>
+          <ul class="list filter">
+            <li class="item"><button type="button" class="button">Усі</button></li>
+            <li class="item"><button type="button" class="button">Веб-сайти</button></li>
+            <li class="item"><button type="button" class="button">Додатки</button></li>
+            <li class="item"><button type="button" class="button">Дизайн</button></li>
+            <li class="item"><button type="button" class="button">Маркетинг</button></li>
           </ul>
-          <ul class="list">
+          <ul class="list project">
             <li class="item">
               <a href="" class="link">
                 <img src="./images/img1.jpg" alt="Веб-сайт Технокряк" width="370" height="294" />
-                <h2 class="title">Технокряк</h2>
-                <p class="filter-text">Веб-сайт</p>
+                <div class="caption">
+                  <h2 class="title">Технокряк</h2>
+                  <p class="filter-text">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="item">
@@ -68,8 +70,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                <p class="filter-text">Дизайн</p>
+                <div class="caption">
+                  <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                  <p class="filter-text">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="item">
@@ -80,8 +84,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="title">Ресторан Seafood</h2>
-                <p class="filter-text">Додаток</p>
+                <div class="caption">
+                  <h2 class="title">Ресторан Seafood</h2>
+                  <p class="filter-text">Додаток</p>
+                </div>
               </a>
             </li>
             <li class="item">
@@ -92,15 +98,19 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="title">Проєкт Prime</h2>
-                <p class="filter-text">Маркетинг</p>
+                <div class="caption">
+                  <h2 class="title">Проєкт Prime</h2>
+                  <p class="filter-text">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="item">
               <a href="" class="link">
                 <img src="./images/img5.jpg" alt="Додаток Проєкт Boxes" width="370" height="294" />
-                <h2 class="title">Проєкт Boxes</h2>
-                <p class="filter-text">Додаток</p>
+                <div class="caption">
+                  <h2 class="title">Проєкт Boxes</h2>
+                  <p class="filter-text">Додаток</p>
+                </div>
               </a>
             </li>
             <li class="item">
@@ -111,8 +121,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="title">Inspiration has no Borders</h2>
-                <p class="filter-text">Веб-сайт</p>
+                <div class="caption">
+                  <h2 class="title">Inspiration has no Borders</h2>
+                  <p class="filter-text">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="item">
@@ -123,15 +135,19 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="title">Видання Limited Edition</h2>
-                <p class="filter-text">Дизайн</p>
+                <div class="caption">
+                  <h2 class="title">Видання Limited Edition</h2>
+                  <p class="filter-text">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="item">
               <a href="" class="link">
                 <img src="./images/img8.jpg" alt="Маркетинг Проєкт LAB" width="370" height="294" />
-                <h2 class="title">Проєкт LAB</h2>
-                <p class="filter-text">Маркетинг</p>
+                <div class="caption">
+                  <h2 class="title">Проєкт LAB</h2>
+                  <p class="filter-text">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="item">
@@ -142,8 +158,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="title">Growing Business</h2>
-                <p class="filter-text">Додаток</p>
+                <div class="caption">
+                  <h2 class="title">Growing Business</h2>
+                  <p class="filter-text">Додаток</p>
+                </div>
               </a>
             </li>
           </ul>
