--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="hero-button">Замовити послугу</button>
       </section>
-      <section class="advantages">
+      <section class="section advantages">
         <div class="container">
           <h2 class="visually-hidden">Переваги</h2>
           <ul class="list advantages-list">
@@ -77,7 +77,7 @@
           </ul>
         </div>
       </section>
-      <section class="work">
+      <section class="section work">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="list work-list">
@@ -93,7 +93,7 @@
           </ul>
         </div>
       </section>
-      <section class="team">
+      <section class="section team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="list cards">
