--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
       </div>
     </header>
     <main>
-      <section class="portfolio">
+      <section class="section portfolio">
         <div class="container">
           <h1 class="visually-hidden">Портфоліо</h1>
           <ul class="list filter">
@@ -173,7 +173,7 @@
         <a href="./index.html" lang="en" class="logo">Web<span class="logo-light">Studio</span></a>
         <address>
           <ul class="list">
-            <li>
+            <li class="footer-item">
               <a
                 href="https://goo.gl/maps/4VGZV7UP3L1ZBJYh8"
                 target="_blank"
@@ -183,12 +183,14 @@
                 м. Київ, пр-т Лесі Українки, 26
               </a>
             </li>
-            <li>
+            <li class="footer-item">
               <a href="mailto:info@devstudio.com" class="link footer-contacts"
                 >info@devstudio.com</a
               >
             </li>
-            <li><a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a></li>
+            <li class="footer-item">
+              <a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a>
+            </li>
           </ul>
         </address>
       </div>
