--- a/index.html
+++ b/index.html
@@ -99,23 +99,31 @@
           <ul class="list cards">
             <li class="card">
               <img src="./images/foto1.jpg" alt="Фото Ігора Дем'яненка" width="270" height="260" />
-              <h3 class="team-name">Ігор Дем'яненко</h3>
-              <p lang="en" class="team-position">Product Designer</p>
+              <div class="card-caption">
+                <h3 class="team-name">Ігор Дем'яненко</h3>
+                <p lang="en" class="team-position">Product Designer</p>
+              </div>
             </li>
             <li class="card">
               <img src="./images/foto2.jpg" alt="Фото Ольги Рєпіної" width="270" height="260" />
-              <h3 class="team-name">Ольга Рєпіна</h3>
-              <p lang="en" class="team-position">Frontend Developer</p>
+              <div class="card-caption">
+                <h3 class="team-name">Ольга Рєпіна</h3>
+                <p lang="en" class="team-position">Frontend Developer</p>
+              </div>
             </li>
             <li class="card">
               <img src="./images/foto3.jpg" alt="Фото Миколи Тарасова" width="270" height="260" />
-              <h3 class="team-name">Микола Тарасов</h3>
-              <p lang="en" class="team-position">Marketing</p>
+              <div class="card-caption">
+                <h3 class="team-name">Микола Тарасов</h3>
+                <p lang="en" class="team-position">Marketing</p>
+              </div>
             </li>
             <li class="card">
               <img src="./images/foto4.jpg" alt="Фото Михайла Єрмакова" width="270" height="260" />
-              <h3 class="team-name">Михайло Єрмаков</h3>
-              <p lang="en" class="team-position">UI Designer</p>
+              <div class="card-caption">
+                <h3 class="team-name">Михайло Єрмаков</h3>
+                <p lang="en" class="team-position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
