--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
             <li class="item">
               <a href="" class="link">
                 <img src="./images/img1.jpg" alt="Веб-сайт Технокряк" width="370" height="294" />
-                <div class="caption">
+                <div class="project-caption">
                   <h2 class="title">Технокряк</h2>
                   <p class="filter-text">Веб-сайт</p>
                 </div>
@@ -70,7 +70,7 @@
                   width="370"
                   height="294"
                 />
-                <div class="caption">
+                <div class="project-caption">
                   <h2 class="title">Постер New Orlean vs Golden Star</h2>
                   <p class="filter-text">Дизайн</p>
                 </div>
@@ -84,7 +84,7 @@
                   width="370"
                   height="294"
                 />
-                <div class="caption">
+                <div class="project-caption">
                   <h2 class="title">Ресторан Seafood</h2>
                   <p class="filter-text">Додаток</p>
                 </div>
@@ -98,7 +98,7 @@
                   width="370"
                   height="294"
                 />
-                <div class="caption">
+                <div class="project-caption">
                   <h2 class="title">Проєкт Prime</h2>
                   <p class="filter-text">Маркетинг</p>
                 </div>
@@ -107,7 +107,7 @@
             <li class="item">
               <a href="" class="link">
                 <img src="./images/img5.jpg" alt="Додаток Проєкт Boxes" width="370" height="294" />
-                <div class="caption">
+                <div class="project-caption">
                   <h2 class="title">Проєкт Boxes</h2>
                   <p class="filter-text">Додаток</p>
                 </div>
@@ -121,7 +121,7 @@
                   width="370"
                   height="294"
                 />
-                <div class="caption">
+                <div class="project-caption">
                   <h2 class="title">Inspiration has no Borders</h2>
                   <p class="filter-text">Веб-сайт</p>
                 </div>
@@ -135,7 +135,7 @@
                   width="370"
                   height="294"
                 />
-                <div class="caption">
+                <div class="project-caption">
                   <h2 class="title">Видання Limited Edition</h2>
                   <p class="filter-text">Дизайн</p>
                 </div>
@@ -144,7 +144,7 @@
             <li class="item">
               <a href="" class="link">
                 <img src="./images/img8.jpg" alt="Маркетинг Проєкт LAB" width="370" height="294" />
-                <div class="caption">
+                <div class="project-caption">
                   <h2 class="title">Проєкт LAB</h2>
                   <p class="filter-text">Маркетинг</p>
                 </div>
@@ -158,7 +158,7 @@
                   width="370"
                   height="294"
                 />
-                <div class="caption">
+                <div class="project-caption">
                   <h2 class="title">Growing Business</h2>
                   <p class="filter-text">Додаток</p>
                 </div>
